--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -32,6 +32,7 @@ brush-core = { version = "^0.4.0", path = "../brush-core" }
 crossterm = { version = "0.29.0", features = ["serde"], optional = true }
 indexmap = "2.13.0"
 nu-ansi-term = { version = "0.50.3", optional = true }
+radix_trie = "0.3.0"
 reedline = { version = "0.45.0", optional = true }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["rt", "sync"] }
