--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -5,15 +5,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to suggest an improvement to brush! We welcome and appreciate
-        all input and feedback. While we can't commit to prioritizing or implementing all such
-        requests, we'd rather you make the suggestion than not.
+        Thanks for taking the time to suggest an improvement to brush! We welcome and appreciate all input and feedback. While we can't commit to prioritizing or implementing all such requests, we'd rather you make the suggestion than not.
 
-        Our only requests: (1) please ensure you follow our project's
-        [Code of Conduct](https://github.com/reubeno/brush#coc-ov-file), and
-        (2) before submitting, please [search existing issues](https://github.com/reubeno/brush/issues)
-        to check if a similar request already exists. If it does, feel free to add a comment
-        to the existing issue instead.
+        Our only requests: (1) please ensure you follow our project's [Code of Conduct](https://github.com/reubeno/brush#coc-ov-file), and (2) before submitting, please [search existing issues](https://github.com/reubeno/brush/issues) to check if a similar request already exists. If it does, feel free to add a comment to the existing issue instead.
 
   - type: textarea
     id: description
@@ -28,10 +22,10 @@ body:
     id: use-case
     attributes:
       label: Use case / motivation
-      description: >
-        Why is this feature important to you? What problem does it solve?
-        How would you use it? Providing context helps us understand the value
-        and prioritize accordingly.
+      description: |
+        Why is this feature important to you? What problem does it solve? How would you use it?
+
+        Providing context helps us understand the value and prioritize accordingly.
       placeholder: Explain why this feature would be useful...
     validations:
       required: true
