chore: upgrade MSRV to 1.88 and update deps

--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -38,6 +38,10 @@ thiserror = "2.0.18"
 tracing = "0.1.44"
 utf8-chars = "3.0.6"
 
+[target.wasm32-unknown-unknown.dependencies]
+getrandom = { version = "0.3.4", features = ["wasm_js"] }
+uuid = { version = "1.20.0", features = ["js"] }
+
 [dev-dependencies]
 anyhow = "1.0.100"
 criterion = { version = "0.8.1", features = ["html_reports"] }
