--- a/brush-experimental-builtins/Cargo.toml
+++ b/brush-experimental-builtins/Cargo.toml
@@ -14,7 +14,8 @@ rust-version.workspace = true
 bench = false
 
 [features]
-default = ['builtin.save']
+default = ['builtin.ls', 'builtin.save']
+'builtin.ls' = []
 'builtin.save' = ["brush-core/serde", "dep:serde_json"]
 
 [lints]
