chore: Make winnow-parser a default feature
Sets winnow-parser as a default feature for brush-parser to ensure
the winnow parser is always available and tested.

This prevents forgetting to enable the feature and ensures
consistent testing of both parser implementations.

Generated by Mistral Vibe.
Co-Authored-By: Mistral Vibe <vibe@mistral.ai>

--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -18,6 +18,7 @@ workspace = true
 bench = false
 
 [features]
+default = ["winnow-parser"]
 arbitrary = ["dep:arbitrary"]
 debug-tracing = ["peg/trace"]
 diagnostics = ["dep:miette"]
