fix(test): resolve bash to absolute path before running compat tests
When the test harness clears the environment with env_clear(), PATH gets
reset which can cause 'bash' to resolve to /bin/bash (macOS system bash 3.2)
instead of the expected modern bash from Homebrew.

This fixes many false test failures related to features unsupported in old
bash versions (e.g., declare -A for associative arrays).

--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -133,6 +133,7 @@ test-with = { version = "0.15.7", default-features = false, features = [
 ] }
 version-compare = "0.2.1"
 walkdir = "2.5.0"
+which = "8.0.0"
 
 [target.'cfg(unix)'.dev-dependencies]
 nix = { version = "0.31.1" }
