WIP: make winnow parser the default
- Add experimental-parser to default features in brush-shell
- Rename --experimental-parser flag to --peg-parser (inverted logic)
- Winnow is now the default, use --peg-parser for legacy PEG parser
- Fix clippy warnings in compat_tests.rs

--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -50,7 +50,7 @@ path = "benches/shell.rs"
 harness = false
 
 [features]
-default = ["basic", "reedline", "minimal"]
+default = ["basic", "reedline", "minimal", "experimental-parser"]
 basic = ["brush-interactive/basic"]
 minimal = ["brush-interactive/minimal"]
 reedline = ["brush-interactive/reedline"]
