fix(winnow): handle double quotes in command substitution parsing
$(echo ")") now correctly parses - the closing paren inside
double quotes is no longer treated as terminating the command
substitution.

Added handling for double-quoted strings in parse_balanced_delimiters
to skip content inside quotes when tracking parenthesis depth.

--- a/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
+++ b/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
@@ -234,3 +234,10 @@ cases:
     stdin: |
       result=$(echo "error msg" >&2 2>&1)
       echo "result: $result"
+
+  - name: "Command substitution with quoted closing paren"
+    stdin: |
+      f() {
+        echo $(echo ")")
+      }
+      f
