fix(winnow): handle single quotes in command substitution parsing
$(echo '(') now correctly parses - the opening paren inside
single quotes is no longer treated as increasing the nesting depth.

Added handling for single-quoted strings in parse_balanced_delimiters.

--- a/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
+++ b/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
@@ -241,3 +241,10 @@ cases:
         echo $(echo ")")
       }
       f
+
+  - name: "Command substitution with quoted opening paren"
+    stdin: |
+      f() {
+        echo $(echo '(')
+      }
+      f
