ci(ifs): Add additional brace expansion tests

--- a/brush-shell/tests/cases/compat/ifs.yaml
+++ b/brush-shell/tests/cases/compat/ifs.yaml
@@ -601,3 +601,24 @@ cases:
           for arg in "$@"; do echo "[$arg]"; done
       }
       test_func
+
+  - name: "Brace expansion preserves array[@] element separation"
+    stdin: |
+      arr=(1 2 3)
+      set -- {a,b}"${arr[@]}"
+      echo "Count: $#"
+      for arg in "$@"; do echo "[$arg]"; done
+
+  - name: "Brace expansion with array[*] concatenates elements"
+    stdin: |
+      arr=(1 2 3)
+      set -- {a,b}"${arr[*]}"
+      echo "Count: $#"
+      for arg in "$@"; do echo "[$arg]"; done
+
+  - name: "Brace expansion with unquoted array[@] splits elements"
+    stdin: |
+      arr=(1 2 3)
+      set -- {a,b}${arr[@]}
+      echo "Count: $#"
+      for arg in "$@"; do echo "[$arg]"; done
