fix: readonly should operate on global scope
In bash, 'readonly VAR' always operates on the global scope, even when
called inside a function. Previously, brush was treating 'readonly'
like 'declare -r', which creates a local variable.

This fixes the issue where 'readonly ARR' inside a function would
create an empty local variable instead of marking the existing global
array as readonly.

--- a/brush-shell/tests/cases/compat/builtins/readonly.yaml
+++ b/brush-shell/tests/cases/compat/builtins/readonly.yaml
@@ -14,3 +14,13 @@ cases:
 
       echo "Invoking declare -p..."
       declare -p my_var
+
+  - name: "readonly array after append"
+    stdin: |
+      ARR=()
+      f() {
+          ARR+=("a" "b")
+          readonly ARR
+          echo "${#ARR[@]}"
+      }
+      f
