fix(winnow): handle POSIX character classes in regex patterns
[[ "hello" =~ ^[[:print:]]+$ ]] now correctly parses. The issue was
that ]] inside a bracket expression like [[:print:]] was being
mistakenly treated as the end of the extended test.

Fix by tracking bracket depth in ext_test_regex_word - only check
for ]] as a stop condition when not inside a bracket expression.

--- a/brush-shell/tests/cases/compat/extended_tests.yaml
+++ b/brush-shell/tests/cases/compat/extended_tests.yaml
@@ -379,3 +379,9 @@ cases:
 
       # All should have the same result
       [[ $r1 -eq $r2 && $r2 -eq $r3 ]] && echo "All -t results match"
+
+  - name: "Regex match with POSIX character class"
+    stdin: |
+      # POSIX character classes like [:print:] in regex
+      [[ "hello" =~ ^[[:print:]]+$ ]] && echo "printable"
+      [[ $'\x01' =~ [[:print:]] ]] || echo "control char not printable"
