fix(winnow): support -a flag and extglob patterns in extended tests
- Add -a as alias for -e (file exists) in [[ ]] tests
- Support extglob patterns like +([...]) in == and != comparisons
- Track parentheses depth in ext_test_regex_word to properly handle
  nested patterns

--- a/brush-shell/tests/cases/compat/extended_tests.yaml
+++ b/brush-shell/tests/cases/compat/extended_tests.yaml
@@ -385,3 +385,13 @@ cases:
       # POSIX character classes like [:print:] in regex
       [[ "hello" =~ ^[[:print:]]+$ ]] && echo "printable"
       [[ $'\x01' =~ [[:print:]] ]] || echo "control char not printable"
+
+  - name: "Extended test -a flag for file existence"
+    stdin: |
+      [[ -a /tmp ]] && echo "/tmp exists"
+      [[ -a /nonexistent ]] || echo "nonexistent does not exist"
+
+  - name: "Extended test extglob pattern matching"
+    stdin: |
+      exclude="0123456789"
+      [[ "8675309" == +([$exclude]) ]] && echo "matches digits"
