fix(winnow): parse quoted strings in glob patterns correctly
Pattern like *" ${var} "* would fail to parse because the
take_while in ext_test_regex_word would consume the quote character
along with the glob, instead of letting the quote case handle it.

Fix by adding quote characters to the stop set for take_while, so
quotes are always handled by the dedicated quote parsing case.

--- a/brush-shell/tests/cases/compat/extended_tests.yaml
+++ b/brush-shell/tests/cases/compat/extended_tests.yaml
@@ -198,6 +198,13 @@ cases:
       [[ "abc" == "a*" ]] && echo "1. Matches"
       [[ "abc" != "a*" ]] && echo "2. Matches"
 
+  - name: "Pattern matching with spaces in glob"
+    known_failure: true  # Runtime bug: pattern matching with spaces in variable expansion
+    stdin: |
+      USE="foo bar"
+      flag="bar"
+      [[ " ${USE} " == *" ${flag} "* ]] && echo "found"
+
   - name: "Tilde binary string matching"
     stdin: |
       x='~/'
