fix(completion): only deduplicate completions in interactive presentation

--- a/brush-shell/tests/cases/compat/builtins/complete.yaml
+++ b/brush-shell/tests/cases/compat/builtins/complete.yaml
@@ -102,5 +102,13 @@ cases:
 
       complete -r -E
       echo $?
-      
+
       complete -p
+
+  - name: "compgen -W preserves duplicates"
+    stdin: |
+      compgen -W "a b a c b"
+
+  - name: "compgen -W preserves order"
+    stdin: |
+      compgen -W "z y x a"
