feat(parser): handle inline comments in PEG command substitution
Exclude '#' from literal text when inside command context and add
comment handling to command_piece() rule. This allows comments within
 command substitutions to be properly parsed.

--- a/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
+++ b/brush-shell/tests/cases/compat/word_expansion/command_substitution.yaml
@@ -182,3 +182,16 @@ cases:
 
       $($(:))
       echo "exit code: $?"
+
+  - name: "Comment in command substitution without newline fails"
+    known_failure: true
+    stdin: |
+      x=$(echo # must fail)
+
+  - name: "Comment in command substitution with newline"
+    stdin: |
+      x=$(
+        echo "a" # comment with "quote
+        echo "b"
+      )
+      echo "$x"
