--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -120,6 +120,7 @@ diff = "0.1.13"
 expectrl = "0.8.0"
 glob = "0.3.3"
 indent = "0.1.1"
+indexmap = "2.13.0"
 junit-report = "0.8.3"
 os-release = "0.1.0"
 predicates = "3.1.3"
